--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,7 +12,7 @@
  *= require_tree .
  */
 
-li {
+li.name {
   list-style: none;
 }
 
@@ -28,4 +28,3 @@ li {
   width: 32px;
   height: 32px;
   margin-right: 0.5em;
-}
